editing vignette section

--- a/_posts/thesis_chapters/2025-6-5-Design_v3.md
+++ b/_posts/thesis_chapters/2025-6-5-Design_v3.md
@@ -68,12 +68,9 @@ title: 5. Findings - Design Narrative
 
 # Findings: Design Narrative
 
-
-
-## Chapter Introduction  
 ## Chapter introduction
 
-This chapter presents a design narrative that traces the evolution of the learning environment developed in this research, focusing on how the design responded to emergent tensions across different phases of implementation. The narrative approach adopted here is informed by design-based research (DBR) traditions and supported by the analytical tools of third-generation activity theory (3GAT), as outlined in Chapter 3. Through this framing, the chapter aims to demonstrate how changes in tools, documentation, and pedagogical strategies were shaped by iterative analysis of contradictions and participant need.
+This chapter presents a design narrative that traces the evolution of the learning environment developed in this research, focusing on how the design responded to emergent tensions across different phases of implementation. The narrative approach adopted here is informed by design-based reabove search (DBR) traditions and supported by the analytical tools of third-generation activity theory (3GAT), as outlined in Chapter 3. Through this framing, the chapter aims to demonstrate how changes in tools, documentation, and pedagogical strategies were shaped by iterative analysis of contradictions and participant need.
 
 Design narratives are particularly useful in DBR for describing situated, context-sensitive changes to an intervention over time [@hoadley_creating_2002-1; @bell_theoretical_2004]. Here, the narrative is grounded in the concrete details of the research setting and practices, and attends closely to how formative redesigns emerged in response to barriers encountered by participants. The approach is also underpinned by an argumentative grammar that draws together key concepts from DBR and CHAT: iterative cycles of transformation, the surfacing of tensions between systemic elements, the role of secondary stimuli and affordances in mediating participant agency, and the developmental process of rising to the concrete through exploration of a germ cell.
 
@@ -83,28 +80,26 @@ A key outcome of the design process was the introduction and later development o
 
 By narrating the emergence and evolution of the learning design, this chapter contributes to the overall methodological and theoretical project of the thesis: to understand how participatory, tool-mediated environments can be iteratively developed through a synthesis of CHAT and DBR. It also begins the task of articulating the design heuristics that emerged from this process, which are revisited and synthesised in later chapters.
 
+
+
 ## Vignette and broad analysis using an analysis of activity systems
 
-This section begins analysis of the learning design intervention via the exploration of two scopes of activity system using an illustrative vignette (included as Appendix 5.toby).
-
-At this stage, to ground the reader, we can locate the over-arching object of the activity in broad terms as collectively making a game to share. This is expressed via sharing a photograph of P3 end showcase where learners share their games in the foyer of the university building in which the activity took place.
+The following vignette is used to introduce the activity system at both community and individual levels, and to illustrate the types of tensions that shaped later design responses. A fuller vignette is included as Appendix.5.toby. From a 3GAT perspective, this activity can be understood across two nested levels. At the community level the over-arching object of the activity in broad terms as collectively making a game to share. To illustrate this goal the following photograph of P3 end showcase show learners share their games in the foyer of the university building in which the activity took place.
 
 ![Figure.5.carrot - Final showcase activity in Brooks Building with home made cabinet surrounding a laptop computer.](./Pictures/carroteater3.jpg){width=90%}
 
-The broader of the two activity systems explored in this section is represented in two figures below, firstly as a joint activity stemming from the intersection of wider activity systems in Fig 5.x, and secondly as an activity in its own right in Fig 5.x
+The activity system can be seen as a joint activity stemming from the intersection of wider activity systems in Fig 5.broad. This figure is a necessary simplification of the sources of diverse cultural and contextual factors that feed into the new shared activity system of the game making community.
 
-![Illustration 5.x - Broad Environmental Activity Systems  ](./Pictures/At_dia_3_v2.png){width=95%}
+![Illustration 5.x - Broad Environmental Activity Systems  ](./Pictures/At_dia_3_v3.png){width=95%}
 Figure 5.broad - Broad environmental activity systems
 
-The figure above is necessary simplification of the sources of diverse cultural and contextual factors that feed into the new shared activity system of the game making community. Using concepts explored in Chapter 2, the new activity can been seen as a boundary object where different motivations are negociated via a process of mutual appropriation. Examples of the influence of those wider systems in the game making activity including playful interactions, the supportive practices of parents, and guidance in practical coding practices from facilitators are explored in Chapters 6 and 7.
+Using concepts explored in Chapter 2, the new activity can been seen as a boundary object where different motivations are negotiated via a process of mutual appropriation. Examples of the influence of those wider systems in the game making activity including playful interactions, the supportive practices of parents, and guidance in practical coding practices from facilitators are explored in Chapters 6 and 7.
 
 Using a 3GAT approach, the component parts of this new activity system are represented below in Figure 5.large, the scope of activity here takes as a subject the community of individuals in the room during the game making sessions, namely parents, children, student helpers and myself as a researcher / facilitator.
 
-![Figure 5.x - Activity system 1 - an emerging community of novice game makers community making games as a learning experience ](./Pictures/At_dia_1_v5.png){width=95%}
+![Figure 5.full - Activity system 1 - an emerging community of novice game makers community making games as a learning experience ](./Pictures/At_dia_1_v5.png){width=95%}
 
-Relevant component elements are labeled in the Figure above however to more naratively situate a description of this system, I draw on illustrative extracts from vignette 5.toby. Before the vignette begins, Toby, a child participant, has been working independently on his emerging platform game for the first five minutes of the session. He is seated next to his two grandparents who are modifying their own games. At the start of the vignette, in my role as session facilitator, I make a brief opening announcement, drawing the participants' attention to the upcoming showcasing of their games to students in the building’s foyer. This announcement serves to focus their attention on the completion of their games. The imagined audience of players seems to contribute to Toby’s careful attention to the challenge and variety of the game-playing experience, particularly in the specifics of his level design, which is documented in the screenshots and descriptions provided in the vignette. It becomes clear that the more immediate audience of his peers plays an important role in guiding his design decisions. During the session, Toby invites other group members to play his game, initiating and responding to conversations about the difficulty of his game design
-
-HOW TO FRAME THE USE OF THE VIGNETTE DATA HERE? RESTRUTURE - DO INCLUDE END INTERACTION AS A TABLE.
+To analyse this moment more precisely, the activity system is mapped in the Figure.5.full above however to more narratively situate a description of this system, I draw on illustrative extracts from Vignette 5.toby. Before the vignette begins, Toby, a child participant, has been working independently on his emerging platform game for the first five minutes of the session. He is seated next to his two grandparents who are modifying their own games. At the start of the vignette, in my role as session facilitator, I make a brief opening announcement, drawing the participants' attention to the upcoming showcasing of their games to students in the building’s foyer. This announcement serves to focus their attention on the completion of their games. The imagined audience of players seems to contribute to Toby’s careful attention to the challenge and variety of the game-playing experience, particularly in the specifics of his level design, which is documented in the screenshots and descriptions provided in the vignette. It becomes clear that the more immediate audience of his peers plays an important role in guiding his design decisions. During the session, Toby invites other group members to play his game, initiating and responding to conversations about the difficulty of his game design. This moment illustrates how tool use and peer interaction coalesced around a newly stabilised object of activity.
 
 While my session announcement broadly frames the object of activity as participation in a community endeavour to create a game for an external audience, a 3GAT interpretation reveals several interrelated facets of the object. The object encompasses both digital and physical aspects. Specifically, it includes the use of varied software tools to develop code and game assets, the use of physical computers for coding, and the eventual incorporation of self-made arcade cabinets during the showcase stage. At the community level of activity, the object also includes the complex interaction of motivations driving all members of the community. These motivations, particularly playful and social interactions, became quickly tangible and evident as the session progressed. Participants’ engagement with each other, as well as with the task itself, played a significant role in shaping their individual and collective experiences. In addition, during Phase 1 (P1), the object of activity for the community had to expand to include a focus on the evolution of a group working process. This expansion addressed tensions in the fledgling design, highlighting the pedagogical considerations and adjustments necessary to support participants in the process of game development. These collaborative pedagogical advances and how they contributed to the joint understanding of the joint object of activity are explored later in this chapter.
 
