--- a/_posts/thesis_chapters/2025-6-5-Design_v7.md
+++ b/_posts/thesis_chapters/2025-6-5-Design_v7.md
@@ -81,10 +81,9 @@ A key outcome of the design process was the introduction and later development o
 By narrating the emergence and evolution of the learning design, this chapter contributes to the overall methodological and theoretical project of the thesis: to understand how participatory, tool-mediated environments can be iteratively developed through a synthesis of CHAT and DBR. It also begins the task of articulating the design heuristics that emerged from this process, which are revisited and synthesised in later chapters.
 
 
+## Vignette and activity system analysis
 
-## Vignette and broad analysis using an analysis of activity systems
-
-The following vignette is used to introduce the activity system at both community and individual levels, and to illustrate the types of tensions that shaped later design responses. A fuller vignette is included as Appendix.5.toby. From a 3GAT perspective, this activity can be understood across two nested levels. At the community level the over-arching object of the activity in broad terms as collectively making a game to share. To illustrate this goal the following photograph of P3 end showcase show learners share their games in the foyer of the university building in which the activity took place.
+This vignette introduces the activity system at both community and individual levels, illustrating how emerging tensions shaped later design responses. A fuller version of this episode is provided in  Appendix.5.toby. From a 3GAT perspective, the activity can be understood across two nested levels. At the community level, the overarching object is the collaborative production of a game to share with others. This goal is illustrated by the following photograph from the P3 showcase, in which learners present their games in the foyer of the university building where the activity took place.
 
 ![Figure.5.carrot - Final showcase activity in Brooks Building with home made cabinet surrounding a laptop computer.](./Pictures/carroteater3.jpg){width=90%}
 
@@ -93,13 +92,13 @@ The activity system can be seen as a joint activity stemming from the intersecti
 ![Illustration 5.x - Broad Environmental Activity Systems  ](./Pictures/At_dia_3_v3.png){width=95%}
 Figure 5.broad - Broad environmental activity systems
 
-Using concepts explored in Chapter 2, the new activity can been seen as a boundary object where different motivations are negotiated via a process of mutual appropriation. Examples of the influence of those wider systems in the game making activity including playful interactions, the supportive practices of parents, and guidance in practical coding practices from facilitators are explored in Chapters 6 and 7.
+As explored in Chapter 3, this new activity functions as a boundary object through which different motivations are negotiated via mutual appropriation [@lecusay_telementoring_2015]. Examples of the influence of those wider systems in the game making activity including playful interactions, the supportive practices of parents, and guidance in practical coding practices from facilitators are explored in Chapters 6 and 7.
 
 Using a 3GAT approach, the component parts of this new activity system are represented below in Figure 5.large, the scope of activity here takes as a subject the community of individuals in the room during the game making sessions, namely parents, children, student helpers and myself as a researcher / facilitator.
 
 ![Figure 5.full - Activity system 1 - an emerging community of novice game makers community making games as a learning experience ](./Pictures/At_dia_1_v5.png){width=95%}
 
-To analyse this moment more precisely, the activity system is mapped in the Figure.5.full above however to more narratively situate a description of this system, I draw on illustrative extracts from Vignette 5.toby. Before the vignette begins, Toby, a child participant, has been working independently on his emerging platform game for the first five minutes of the session. He is seated next to his two grandparents who are modifying their own games. At the start of the vignette, in my role as session facilitator, I make a brief opening announcement, drawing the participants' attention to the upcoming showcasing of their games to students in the building’s foyer. This announcement serves to focus their attention on the completion of their games. The imagined audience of players seems to contribute to Toby’s careful attention to the challenge and variety of the game-playing experience, particularly in the specifics of his level design, which is documented in the screenshots and descriptions provided in the vignette. It becomes clear that the more immediate audience of his peers plays an important role in guiding his design decisions. During the session, Toby invites other group members to play his game, initiating and responding to conversations about the difficulty of his game design. This moment illustrates how tool use and peer interaction coalesced around a newly stabilised object of activity.
+To analyse this moment more precisely, Figure 5.full maps the activity system. To narratively situate the system, I draw on illustrative extracts from Vignette 5.toby, included in Appendix.v. Before the vignette begins, Toby, a child participant, has been working independently on his emerging platform game for the first five minutes of the session. He is seated next to his two grandparents who are modifying their own games. At the start of the vignette, in my role as session facilitator, I make a brief opening announcement, drawing the participants' attention to the upcoming showcasing of their games to students in the building’s foyer. This announcement serves to focus their attention on the completion of their games. The imagined audience of players seems to contribute to Toby’s careful attention to the challenge and variety of the game-playing experience, particularly in the specifics of his level design, which is documented in the screenshots and descriptions provided in the vignette. It becomes clear that the more immediate audience of his peers plays an important role in guiding his design decisions. During the session, Toby invites other group members to play his game, initiating and responding to conversations about the difficulty of his game design. This moment illustrates how tool use and peer interaction coalesced around a newly stabilised object of activity.
 
 While my session announcement broadly frames the object of activity as participation in a community endeavour to create a game for an external audience, a 3GAT interpretation reveals several interrelated facets of the object. The object encompasses both digital and physical aspects. Specifically, it includes the use of varied software tools to develop code and game assets, the use of physical computers for coding, and the eventual incorporation of self-made arcade cabinets during the showcase stage. At the community level of activity, the object also includes the complex interaction of motivations driving all members of the community. These motivations, particularly playful and social interactions, became quickly tangible and evident as the session progressed. Participants’ engagement with each other, as well as with the task itself, played a significant role in shaping their individual and collective experiences. In addition, during Phase 1 (P1), the object of activity for the community had to expand to include a focus on the evolution of a group working process. This expansion addressed tensions in the fledgling design, highlighting the pedagogical considerations and adjustments necessary to support participants in the process of game development. These collaborative pedagogical advances and how they contributed to the joint understanding of the joint object of activity are explored later in this chapter.
 
@@ -120,54 +119,51 @@ INCLUDE AN EXTRACT OF VIGNETTE 1 - EDITED DOWN.
 GIVING AN OVERVIEW OF TOOLS IN USE AND SOME SOCIAL ELEMENTS. SCREEN SHOTS COULD BE FULL SCREEN, AND DESCRIPTIVE ELEMENTS INLINE
 THEN SOME TABLE OF INTERACTION / GESTURE ETC.
 
-In the course of the vignette, Toby uses a variety of tools to achieve this goal: a web-based coding tool (code playground), a game template that serves as the base for his game project, and a menu of documentation linking to code examples and tutorials. Implementing more complicated gameplay design patterns (GDPs) involved several stages and varied tools, which can be viewed as sub-actions contributing to the broader goal of applying a GDP. Using the terminology of Leontiev [-@leontiev_activity_2009], Toby can be seen undertaking chains of processes in a fluid way, indicating that these actions had become operations. The commentary in Vignette 5.toby provides a more detailed description of this process.
+In the course of the vignette, Toby uses a variety of tools to achieve this goal: a web-based coding tool (code playground), a game template that serves as the base for his game project, and a menu of documentation linking to code examples and tutorials. Implementing more complicated gameplay design patterns (GDPs) involved several stages and varied tools, which can be viewed as sub-actions contributing to the broader goal of applying a GDP. Using the terminology of Leontiev [-@leontiev_activity_2009], Toby can be seen undertaking chains of processes in a fluid way, indicating that these actions had become operations. The following sections extend this analysis by exploring three core areas of contradiction that shaped the evolving learning design.
+
 
 ## Narrative exploration of key areas of contradictions emerging in the game-making learning design (in P1 /P2?)
 
-The following sections of this chapter examine three main areas of contradictions within the framework of 3GAT. The first area of contradiction addresses the novel and technical aspects of the learning design, focusing on the shifts in software tool use between P1 and P2. The second section investigates issues related to project navigation and the use of supporting documentation in P2. The third area explores contradictions concerning participant identity, a topic highlighted in research reviewed in the first two chapters as presenting significant barriers to learning to code.
+In line with the theoretical framing established in Chapter 3, contradictions are understood as historically and structurally embedded misalignments between elements of an activity system, often made visible during periods of change or innovation . Following Kuutti [-@kuutti_activity_1996] and Engeström [-@engestrom_activity_1987], tensions, barriers, and disruptions in practice are treated as surface-level manifestations of deeper contradictions within and between activity systems [@engestrom_discursive_2011]. These may take the form of technical difficulties, motivational conflicts, or mismatches between participant expectations and the tools or rules shaping the activity. The following sections of this chapter examine three key areas of contradiction within this 3GAT framework. The first addresses tensions arising from the introduction and evolution of technical tools in the learning design, particularly the shift in software practices between P1 and P2. The second focuses on contradictions related to navigation and supporting documentation during P2. The third explores cultural and identity-based tensions in coding participation, an area highlighted in earlier chapters as a persistent barrier to inclusion.
 
-### C1 - Area of contradictions involving organisational issues and the use of game programming and asset authoring tools
 
-FIRST THE NEED AND THE GAP VIA NARRATIVE.
-ORGANISED INTO THREE TENSONS
- - T1 - mismatch of ability and desire
- - T2 - facilitator time to support
- - T3 - authenticity of tools (also explored in discussion)
 
-THEN THE DESIGN TO ADDRESS NEED / TENSIONS
+### Contradiction area 1: involving organisational issues and the use of game programming and asset authoring tools
 
-THEN THE RESULT / IMPACT
+#### Description of what happened
 
-#### Narrative description of the needs and tensions of design  
+As a recap from Chapter 4, Phase 1 (P1) was exploratory, while Phase 2 (P2) marked the first full implementation using introduced resources. In this section, I draw on journal notes and participant feedback to describe the emergence of key tensions in kickstarting participant game design activity and the subsequent evolution in tool use across these phases.
 
-In this section, I draw on journal notes to describe emerging tensions in kickstarting participant game design activity and the subsequent evolution in tool use between P1 and P2. MAKE SURE THIS IS CLEAR.
+My initial focus in the early stages of P1 was to create a welcoming, low-pressure environment for introducing and exploring the process of making games. To achieve this, I used several activities unrelated to computer coding to scaffold the game design process. Early sessions included playing and discussing retro arcade games, analysing their components, brainstorming game story scenarios, creating pixel-art characters on paper, and making craft collages representing game levels. These multimodal and low-tech activities helped surface ideas, supported collaborative group dynamics, and eased participants into the creative space without the pressure of unfamiliar digital tools.
 
-My initial focus in the early stages of P1 was to create a welcoming, low-pressure environment for introducing and exploring the process of making games. To achieve this, I used several activities unrelated to computer coding to scaffold the game design process. Early sessions included playing and discussing retro arcade games, analysing their components, brainstorming game story scenarios, creating pixel-art characters on paper, and making craft collages for game backgrounds. I also provided learners with a laptop they could take home loaded with vintage arcade and console games to help build familiarity with arcade and retro game tropes through home play. Scenes (?) and characters began to take shape during these relatively unstructured planning sessions, with three, mixed age groups of roughly five participants forming. We then discussed, in simple terms, the game features they wanted to include. An example would be to add a bee as the main character, for it to be able to fly around the screen, and for it to collecting honey. Coding tools and processes were introduced in week five, a delay driven by my concern about the potentially alienating effect of engaging with the unfamiliar experience of computer code. My own motivation to build on prior research into novice use of authentic web text languages, such as JavaScript [@chesterman_webmaking_2015], rather than simplified block-based code, likely heightened this concern. Four weeks into P1, I drew on documentation to create and introduce a structural JavaScript game making template. For a fuller technical breakdown of the tools used in each phase, see Appendix 5.tech.
+Groups formed organically, often along family lines, and began to define their game ideas. Each group had access to a laptop with vintage games installed and a custom URL pointing to a basic JavaScript game template. I postponed introducing code editing tools until around week five, prompted by concerns about overwhelming participants and creating early barriers to engagement. When introduced, the JavaScript editor exposed learners to raw code, without the abstraction or constraint of block-based interfaces. This decision reflected my wariness of oversimplified tools and desire to support authentic engagement with real code [@chesterman_webmaking_2015].
+
+#### Surfaced tensions and framed contradiction
+
+When participants began engaging with code, several tensions quickly surfaced. Many learners had ambitious ideas for their projects including AI-driven enemies and 3D landscapes that were beyond realistic scope of the novice programme. Some became frustrated when their expectations did not align with what was technically possible or comprehensible (INPUT EVIDENCE). Others shifted focus away from programming altogether, contributing instead through narrative or asset design.
+
+At the same time, my own ability to support participants became a limiting factor. While I had prepared a structural starter code in P1, learners frequently needed one-to-one help to make even minor edits. Whole-group demonstrations were largely ineffective: attention drifted, and groups progressed at different speeds and needed different support at different stages. As a result, support bottlenecks emerged, and some participants became stalled early in their projects. My journal notes describe these sessions as increasingly difficult to manage. The use of authentic text code rather than a block coding approach aggravated this tension. Without in-tool help or the supporting structure provided by block coding environments participants had no external supports to draw upon. They relied on me as the primary source of information, further exacerbating the facilitator workload.  While some learners began copying each other's code snippets, misunderstandings remained widespread.
+
 
 ![Figure 5.C1: Representation of emerging areas of contradictions in mid-P1 game making process](./Pictures/At_tension_1_v2.png){width=95%}
 
-This figure is presented to illustrate this area of contradiction as an accumulation of tensions between systems elements. There were tensions between tools at use and the objective of participants including: a lack of supporting documentation, a tension between the introduced authentic code language and novice level, and occasional mismatches between features requested by the community and the limits of the code library. In addition tensions emerged between the organising process at a community level and the object of effectively working on the game code including: a systemic misalignment between the lack of digital project management and the barrier of lack of facilitator time to support learners.
 
-The introduction of textual programming with JavaScript into the game-making process contributed to a range of accumulating tensions. These are initially described in broad terms before focusing on those related to tool use. The gap between participants’ desired game features and their inability to implement them in code led groups to specialise. Some participants with greater confidence or experience took on coding tasks, while others worked on graphical game assets (both digital and physical), narrative planning, or sound elements.
+These tensions reveal a primary contradiction in the activity system between the object of creating expressive, technically functioning games and the mediating means available to support that object. The use of authentic text-based code was intended to foster real engagement with programming, but in practice it created a misalignment between participants’ ambitions, their actual skill levels, and the support structures in place. Tool mediation fell short of enabling meaningful progression, particularly for novices unfamiliar with syntax or programming logic. At the same time, the informal division of labour, based on a single facilitator and loosely defined group roles, proved insufficient to sustain progress across diverse learner needs. Rather than enabling expansive learning, the interaction between tools, subject, and division of labour produced friction and delay. This contradiction pointed to the need for redesigned scaffolding in P2 that could better support the object of creative game development.
 
-T1 - At times, participant expectations exceeded what was realistically achievable within the scope of the game-making project, a tension explored further in Appendix 5.bee. While it was clear that participants needed to develop their coding abilities, the emerging, informal, experimental nature of the learning environment seemed to me to not suit whole-class instruction. This intuition was supported by my reflections on two attempts to deliver whole group presentations of key coding concepts, which I judged in my journal, based on visual cues of engagement, to be unwelcome interruptions to participants’ making activities. Instead, I addressed problems on an individual basis. However, as  more issues arose, I became overwhelmed by the group dynamics and technical demands on my time. After one session, I emailed participants (see Appendix.narrative2), expressing that I felt daunted by the task of facilitating the integration of the disparate creative elements being produced into a cohesive project. I asked parents for ideas and support in organising and bringing more order to group and planning processes. These developing tensions can be framed as contradictions between the tools available to participants and the object of actualising their ideas and graphical assets in code form. Additionally, my limited time as a facilitator highlights a dysfunctional relationship between the division of labour and the object.
 
-In response to my email, parents made suggestions including: use of a visible and shared list of game features that are being worked on, documentation to support the implementation their requirements, and more hands on use of tools before beginning the planning process. The group planning process improved, and the self-organisational abilities of parents and tenacity of young people involved developed. Groups expanded their activity by creating wish lists of game features, which acted as mediating tools to coordinate between different team members and to request facilitator support to implement them via code structures. In addition to helping directly via coding with participants, I began to create short stand-alone instruction documents if I thought the requested code  would be useful to other groups. Despite these changes which helped to address the area of contradiction outlined above, by this point so many tools and processes and had been introduced, complicating the object of activity at the group process level to such an extent that participants were disorientated and even overwhelmed (see Appendix 5.P1.feedback & Appendix 5.bee.).
+#### Design response
 
-On completion of P1, I reflected on the design challenge involved to address the areas of contradiction. The overall learning design should maintain positive motivation towards to the object being worked on and facilitate hands-on coding using authentic tools early in the process to avoid unrealistic expectations. An initial coding activity should help novices build code familiarity without needing explicit instruction. Supporting documentation was needed but should not interfere with the flow of participants game making experience. Finally, the overall learning design should encourage appropriate social learning, peer support and reflective practices but without overly complicating the object of activity or interrupting participant making.
+These tensions shaped a series of design adaptations between P1 and P2. Recognising the need for scaffolding without over-prescription, I developed a more structured **starter game template**. This included a basic working game with editable values and visible parameters for player movement, enemy speed, and sprite swaps. I also embedded comments in the code and highlighted lines intended for modification. This template was introduced via a short scenario that prompted learners to make changes to progress, drawing on the concept of “half-baked” games [@kynigos_children_2018]. This approach aligns with the motivations and techniques of the UMC framework explored in the literature review [@lee_computational_2011], particularly the guideline to "create choices that show visible and immediate changes" [@lytle_use_2019-1, p. 6]. Forcing a rapid transition from the _use_ to _modify_ stages at an early stage allowed for careful scaffolding of initial coding experiences, aimed at overcoming negative affect towards text-based coding.
 
-#### Design description: Using a starter game template within a code playground, and graphical asset authoring tools
+I also prioritised accessible third-party tools for asset creation, particularly Piskel, an online pixel art editor. Piskel allowed learners to design characters and levels visually, which could then be easily inserted into the game engine.
 
-DESIGN SECTION - TO ADDRESS THE TENSIONS
+Alongside technical simplification, I revised facilitation practices. Rather than leading code walkthroughs, I offered small-group check-ins and encouraged peer showcasing of working solutions. These moves helped to reposition facilitation from central control to distributed support. Some learners who had struggled in P1 became sources of informal guidance for others in P2.
 
-A - VARIABLES & STRUCTURE
-B - GRAPHICS IN PISKEL & BACKGROUND IMAGES / COLOURS.
-C - LEVEL DESIGN
+Overall, these changes aimed to realign the activity system by mediating the contradiction between technical ambition and available supports. They also laid the groundwork for the GDP concept, which emerged as a way of sharing and reusing structured code patterns—a development taken up more fully in the next section and in Chapter 6.
 
-This section describes key design features with an aim to show how they addressed the needs and tensions explored above.These include the coding environment, the structure of a starting template and as a starting affordance within it including: highlighting movement variables, the replacement of the deliberately simple colour block graphics with pixel art, and  scaffolded changes to the platformer level design.
+### Technical description of the core toolset
 
-MOVE THIS SECTION AFTER? OR KEEP SOME BEFORE AS AN OVERALL INTRO?
-To encourage playful, hands-on experimentation in the early stages, I opted to use a working game template rather than a purely structural approach through the application of a pedagogical technique used in a previous study [@chesterman_webmaking_2015], which involved highlighting easily alterable code changes that had a significant impact on the final project. Participants were introduced to the starting template game by playing it, but they were unable to jump onto the first platform. To progress, they needed to alter at least one of the key variables highlighted at the very beginning of the game code (see Figure 5.code below). The underlying game structure initially limited user choice, guiding a shared experience for all participants and facilitating peer learning. Kynigos and colleagues [-@kynigos_children_2018] describe this concept as *half-baked games*, where incompleteness or bugs in behaviour provoke participants to correct or modify them. This approach aligns with the motivations and techniques of the UMC framework explored in the literature review [@lee_computational_2011], particularly the guideline to "create choices that show visible and immediate changes" [@lytle_use_2019-1, p. 6]. Forcing a rapid transition from the _use_ to _modify_ stages at an early stage allowed for careful scaffolding of initial coding experiences, aimed at overcoming negative affect towards text-based coding. This alignment with UMC and half-baked design approaches also informed the selection of other key affordances, implemented through simple code changes, which are explored after a summary of the structural design of the game template.
+The following section outlines a technical description of the toolset that emerged from the tensions and contradictions of Phase 1 and which was implemented in Phase 2. This is included with a significant level of detail within the chapter and with a greater level of detail in technical appendix to allow for replicability and to allow a more situated understanding of the activities being carried out.
 
 0 - ENVIRONMENT
 
@@ -185,7 +181,7 @@ Figure 5.code : Summary of the features of the glitch code playground environmen
 4. Code editing area
 5. Game preview area
 
- The Glitch.com code editing tool had three main areas. First, on the left, there were options to change project settings, an assets link to manage image and audio files, and a list of project files, including JavaScript, HTML, and CSS. Second, in the central code window, participants could view and edit the code and comments. Third, on the right, a game preview displayed the immediate updates resulting from changes made to the code in the central window.
+The Glitch.com code editing tool had three main areas. First, on the left, there were options to change project settings, an assets link to manage image and audio files, and a list of project files, including JavaScript, HTML, and CSS. Second, in the central code window, participants could view and edit the code and comments. Third, on the right, a game preview displayed the immediate updates resulting from changes made to the code in the central window.
 
 A - VARIABLES & STRUCTURE
 
@@ -212,7 +208,10 @@ Figure 5.grid - Grid based editing of level design with a simple key for hazards
 
 Technically, each level is a JavaScript object consisting of a data array of 12 entries containing 17 characters which representing a matrix layout of the game. Each grid entry can be either black or one of the following: x (platform); h (hazard); o (coin). The structure of text-based array has a strong visual correlation with the resulting game layout and changes to the text based grid in the code area on the left would be immediately seen in the right hand project preview area. This solution abstracts away complexity and repetitive nature of asset placement mirroring a technique called tilemaps [@erhard-olsson_procedural_2018] used in GUI oriented game making tools (see glossary and Appendix.tech).
 
-#### Brief section on Impact
+
+
+
+#### Brief section on Impact - INTEGRATE ABOVE SOMEHOW? 
 
 INCLUDE SOME INTERVIEW DATA IF USEFUL.
 IF NOT THEN DO SOME SIGNPOSTING AS TO WHERE THE IMPACT IS EXPLORED IN LATER CHAPTERS. ETC.
