moving on to c2

--- a/_posts/thesis_chapters/2025-6-5-Design_v7.md
+++ b/_posts/thesis_chapters/2025-6-5-Design_v7.md
@@ -209,9 +209,7 @@ Figure 5.grid - Grid based editing of level design with a simple key for hazards
 Technically, each level is a JavaScript object consisting of a data array of 12 entries containing 17 characters which representing a matrix layout of the game. Each grid entry can be either black or one of the following: x (platform); h (hazard); o (coin). The structure of text-based array has a strong visual correlation with the resulting game layout and changes to the text based grid in the code area on the left would be immediately seen in the right hand project preview area. This solution abstracts away complexity and repetitive nature of asset placement mirroring a technique called tilemaps [@erhard-olsson_procedural_2018] used in GUI oriented game making tools (see glossary and Appendix.tech).
 
 
-
-
-#### Brief section on Impact - INTEGRATE ABOVE SOMEHOW? 
+#### Brief section on Impact - INTEGRATE ABOVE SOMEHOW?
 
 INCLUDE SOME INTERVIEW DATA IF USEFUL.
 IF NOT THEN DO SOME SIGNPOSTING AS TO WHERE THE IMPACT IS EXPLORED IN LATER CHAPTERS. ETC.
@@ -225,6 +223,78 @@ The use of a template aligned with half-baked approach helped by introducing cod
 The ability for individuals and pairs to make quick changes to the games templates via in terms of the affordances described in the previous section appeared to build their ownership over these fledgling games and set a path of working in a smaller group.
 
 While my design aim was in part to reduce coding syntax errors and thus reduce learner anxiety, I did not wish not to remove the possibility of learners making mistakes entirely. While even these small changes involved potential syntax errors, as these simple expressions were surrounded by other lines modelling the correct syntax, they could often be corrected by the participants without facilitator support. This chapter's vignette (Appendix 5.toby), where Toby designs many levels as a way of making his game distinct from others, illustrates the impact of this technical adaptation on the evolution of social coding processes a theme which is explored in more detail in a following section.
+
+
+### Contradiction area 2: contradictions associated with project navigation and use of documentation
+
+#### Description of what happened
+
+The following section outlines an area of contradiction associated with the introduction of supporting forms of documentation to scaffold the game-making process.
+
+Research on formative interventions using a CHAT approach outlines how systemic changes designed to address areas of contradiction are likely to introduce new tensions between systemic elements. In the previous section, the introduction of a half-baked template and the UMC (Understand–Modify–Create) approach had the unintended consequence of reducing the average working group size. One result of this shift was an increase in the number of individual projects being developed, which in turn led to an increased demand on my time as a technical troubleshooter.
+
+While the in-tool scaffolding within the code template accelerated production [@laurillard2020significance] for most learners, participants still required help adding new code structures to their games, particularly during the _Create_ stage of UMC. In P1, resources to support implementation were minimal and not designed for reuse. My direct input was often needed at this stage, leading to delays and participant frustration due to the limited time I could offer each pair or group.
+
+During the development period after P1, I reflected on the tension between learner agency, particularly the role of creative autonomy, and the need for shared reference points that could enable efficient progress without constant facilitator intervention. Based on these reflections, I developed several new artefacts designed to scaffold project navigation and reduce the bottleneck of real-time technical support.
+
+#### Surfaced tensions and framed contradiction
+
+Three interrelated tensions became apparent in this phase. First, while the revised design supported creative freedom and allowed for wide variation in project direction, it also made it difficult for learners to know how far along they were or what steps to take next. As noted in my journal: “Some participants were making levels, others were still choosing assets. It was all motion but not always momentum.” This lack of shared milestones or visible sequencing reduced the coherence of group progress.
+
+Second, participants increasingly relied on me to identify and explain reusable code fragments. While I introduced a visual walkthrough of the starter template and encouraged learners to adapt from it, most found it hard to generalise or reapply those examples. A lack of documentation capturing _how_ code fragments had been used successfully in other games meant that knowledge remained local and ephemeral. One learner asked, “Can you just give me the bit from that jumping game?” but I had no ready way to share this consistently.
+
+Third, as new artefacts such as Quick Start cards and walkthroughs were introduced, they helped address some of these gaps but also introduced new forms of dependency. Learners sometimes treated these documents as scripts rather than prompts. In one session, I observed a pair follow a printed guide verbatim, including its original filenames and character names, which clashed with their own project ideas.
+
+Together, these challenges point to a contradiction between the **object** of the activity (learner-led game creation using flexible tools) and the evolving **rules and mediating artefacts** intended to support that process. The activity system lacked a shared, structured way for participants to orient themselves in the development process or to reuse successful code patterns without facilitator mediation. The flexibility of the environment became a source of friction, not just a space for exploration.
+
+#### Design response
+
+To address these tensions, I developed a small set of mediational artefacts intended to structure project progress, support shared navigation, and enable the reuse of working design fragments.
+
+##### 1. UMC development structure
+
+The Understand–Modify–Create (UMC) structure was formalised as a visible project scaffold. It provided a light-touch sequence of development stages: understanding how a feature worked, modifying an example, and finally creating an original version. I presented UMC both verbally and visually, encouraging learners to revisit previously implemented features before building new ones.
+
+This structure was also integrated into session activities. For example, learners were asked to annotate a code block by identifying what it did (Understand), then change a small element (Modify), and finally integrate it into their own project context (Create). While not always followed strictly, the UMC framing helped stabilise expectations around iterative development and supported learners in pacing their work.
+
+##### 2. Gameplay design pattern (GDP) menus
+
+A new set of artefacts emerged from observing recurring code solutions during P2. I began collecting and curating these fragments into a “gameplay design pattern” (GDP) menu. Each entry represented a small feature or mechanic that learners had successfully implemented, such as a basic scoring system, a moving platform, or a health bar.
+
+Each GDP was written on a card and included:
+- A name (e.g. “Enemy Collision”)
+- A short description
+- A code fragment (usually 4–10 lines)
+- Notes on where it came from (e.g. “Based on Sam’s platform game”)
+
+These were physically displayed on a shared wall and added to weekly. Learners could request a card or copy its code into their project. This reduced repetition and increased visibility of successful patterns. Some learners began suggesting GDPs based on their own experiments, marking a shift in how knowledge circulated in the room.
+
+_Example GDP Card (image):_
+
+![Example GDP card used in-session](/images/design/gdp_example_card.png)
+
+##### 3. Repertoire diagrams
+
+To make the role of GDPs clearer, I began creating visual repertoire diagrams. These diagrams illustrated a sample learner journey through a set of GDPs, showing how features could be chained together or iteratively adapted. One version showed a path from basic movement, to jumping, to collecting objects, to scoring points. The aim was to make visible the cumulative logic of game creation without prescribing a single route.
+
+_Example Repertoire Map:_
+
+![Example gameplay design pattern repertoire map](/images/design/gdp_repertoire_map.png)
+
+I also introduced “choose your own GDP” exercises, where learners were invited to select two patterns they hadn’t tried yet and integrate them into their projects by the end of the session.
+
+##### 4. Scaffolding and customisation
+
+While the GDP cards shared reusable patterns, I continued to emphasise personalisation. Each pattern was offered as a template, not a prescription. Cards included notes like: “Try changing the player speed,” or “You could trigger this when a key is pressed instead.” I encouraged learners to mark up their cards, cross out sections, and write variants.
+
+This dual focus — reuse and adaptation — helped resolve some of the tensions between creative autonomy and structured guidance. Learners still asked questions, but their questions became more specific and situated within shared resources: “Can I use the speed boost pattern with an enemy?” or “What happens if I combine this with my old jump code?”
+
+##### 5. Summary
+
+These responses restructured the activity system by adding mediating artefacts that clarified development stages and made successful practices visible and reusable. The contradiction between open-ended game creation and the absence of shared reference points was partially resolved through the introduction of GDPs, UMC framing, and repertoire diagrams. These moves supported the object of creative game design by aligning tools, rules, and social knowledge in more coherent ways. They also reduced dependency on facilitator input, allowing participants to orient themselves in the learning environment with greater independence.
+
+
+
 
 ### C2 - Contradictions associated with project navigation and use of documentation
 
