tidying sections c1 and c2

--- a/_posts/thesis_chapters/2025-6-5-Design_v8.md
+++ b/_posts/thesis_chapters/2025-6-5-Design_v8.md
@@ -155,17 +155,20 @@ These tensions reveal a primary contradiction in the activity system between the
 
 These tensions shaped a series of design adaptations between P1 and P2. Recognising the need for scaffolding without over-prescription, I developed a more structured **starter game template**. This included a basic working game with editable values and visible parameters for player movement, enemy speed, and sprite swaps. I also embedded comments in the code and highlighted lines intended for modification. This template was introduced via a short scenario that prompted learners to make changes to progress, drawing on the concept of “half-baked” games [@kynigos_children_2018]. This approach aligns with the motivations and techniques of the UMC framework explored in the literature review [@lee_computational_2011], particularly the guideline to "create choices that show visible and immediate changes" [@lytle_use_2019-1, p. 6]. Forcing a rapid transition from the _use_ to _modify_ stages at an early stage allowed for careful scaffolding of initial coding experiences, aimed at overcoming negative affect towards text-based coding.
 
-I also prioritised accessible third-party tools for asset creation, particularly Piskel, an online pixel art editor. Piskel allowed learners to design characters and levels visually, which could then be easily inserted into the game engine.
+I also prioritised accessible third-party tools for asset creation, allowed learners to design characters  visually, to be later imported into the game code. These changes proved to be a significant source of scaffolding in the overall learning design of the study. As such they are explored in greater depth in the following section.
 
-Alongside technical simplification, I revised facilitation practices. Rather than leading code walkthroughs, I offered small-group check-ins and encouraged peer showcasing of working solutions. These moves helped to reposition facilitation from central control to distributed support. Some learners who had struggled in P1 became sources of informal guidance for others in P2.
+Alongside technical simplification, I revised facilitation practices. Rather than attempting to teach code walkthroughs, I encouraged peer showcasing of working solutions and extensive periods of playtesting [^pt]. These moves helped to reposition facilitation from central control to distributed support. Some learners who had struggled in P1 became sources of informal guidance for others in P2.
+THIS IS ALSO COVERED IN C3?
 
-Overall, these changes aimed to realign the activity system by mediating the contradiction between technical ambition and available supports. They also laid the groundwork for the GDP concept, which emerged as a way of sharing and reusing structured code patterns—a development taken up more fully in the next section and in Chapter 6.
+Overall, these changes aimed to realign the activity system by mediating the contradiction between technical ambition and available supports.
 
 ### Technical description of the core toolset
 
 The following section outlines a technical description of the toolset that emerged from the tensions and contradictions of Phase 1 and which was implemented in Phase 2. This is included with a significant level of detail within the chapter and with a greater level of detail in technical appendix to allow for replicability and to allow a more situated understanding of the activities being carried out.
+Signposting sentence for the following sections  at the start
 
-0 - ENVIRONMENT
+
+#### Code playground environment
 
 The use of a code playground and starting template, while technically two separate tools, were experienced by participants as a holistic experience. Code playgrounds, as described in Chapter 2, are online environments used to test, share or invite help from online users on complete or partial code projects or problems, primarily for web-based project involving the technologies of HTML, CSS and variations of JavaScript (for more detail see Appendix 5.tech). The use of code playgrounds by novices can mitigate against some of the initial challenges provided by learning computer coding stemming from  unfamiliarity with and potential complexity of code authoring tools and environments [@guzdial_programming_2004]. Tactics to address challenging elements include steps to reduce syntax errors, shielding complexity, facilitating community commenting, sharing, remixing and other forms of collaboration.
 
@@ -183,11 +186,11 @@ Figure 5.code : Summary of the features of the glitch code playground environmen
 
 The Glitch.com code editing tool had three main areas. First, on the left, there were options to change project settings, an assets link to manage image and audio files, and a list of project files, including JavaScript, HTML, and CSS. Second, in the central code window, participants could view and edit the code and comments. Third, on the right, a game preview displayed the immediate updates resulting from changes made to the code in the central window.
 
-A - VARIABLES & STRUCTURE
+#### Code variables and structure
 
 In P1, after delays caused by lack of coding knowledge, I had guided participants to begin their games by using a very partial template based on an online tutorial. As the process continued, it became apparent that the starting template greatly shaped the following design possibilities. To address this, in the development period between P1 and P2, I redesigned the starting code template of a game with a greater attention to pedagogical concerns in the following ways: I made changes to the code to reduce obscure syntax where possible increasing code readability and simplifying the structure of inter-related functions to facilitate the process of adding new code structures and code snippets. The choice to pre-select a particular genre, specifically a _platformer_ game (see glossary), was a pragmatic response to reducing the tension caused by diverse help requests, which narrowed the range of game features that would be requested. A summary of how these concerns were implemented in the design process follows (see Appendix 5.tech. for a fuller description).
 
-C - GRAPHICAL ASSET SCAFFOLDING
+#### Graphical asset scaffolding
 
 Turning to the use of graphical assets, the starting template was altered to facilitate and encourage the process of adding designs created by participants. Initial graphical assets consisted of colour blocks, a design choice inviting learners to develop game characters from a clean slate (see Figure 5.px). To help resolve the overly complicated use of multiple asset creation tools, I prioritised the use of the pixel art tool Piskel, as I evaluated it to be intuitive for many younger participants. In P2, participants were guided to make a game on a broadly environmental theme, participants often redesigned sprites to games involving animals. Figure 5.fish shows a whale as a player character and plastic bottles as a hazard and fish as an item to collect.
 
@@ -199,7 +202,7 @@ The process of game art and audio creation opportunities seeding narrative and a
 
 While I made several technical adjustments to facilitate the swapping of participant graphical designs (outlined in Appendix 5.tech), the process still required a series of potentially tricky operations. While some novice code authoring tools offer self-contained solutions for audio and graphical asset creation by providing in-built authoring tools and libraries of assets, the code playground Glitch provided neither, thus requiring the use of Piskel as an external asset creation tool, complicating the process. However, this forced choice to use a distributed toolset, rather than a self-contained approach to asset management, led to benefits in developing key digital literacy skills needed for web creation. Some participants became remarkably adept at the complex process of migrating assets from Piskel into their games, transforming the chain of actions involved into fluid operations. This section has focused on the rationale behind the introduction and initial expansion of the design's primary tools, rather than evidencing their subsequent impact on participants, which is explored in Chapter 6.
 
-C - LEVEL DESIGN
+#### Level design
 
 Addressing level design, in P1 the process was relatively complex involving changing parameters of functions to change asset location, and spiralling code complexity (see Appendix 5.chapter). Instead, to align with research on the value of a visual approach to coding multi-media projects for novices [@guzdial_programming_2004; @resnick_scratch:_2009],  in the P2 starting template the use of a graphical grid structure to edit level design shown in Fig 5.grid. A minimal choice of level design elements were represented specifically; platforms to be jumped on; hazards to be avoided; and rewards to be collected.
 
@@ -209,7 +212,7 @@ Figure 5.grid - Grid based editing of level design with a simple key for hazards
 Technically, each level is a JavaScript object consisting of a data array of 12 entries containing 17 characters which representing a matrix layout of the game. Each grid entry can be either black or one of the following: x (platform); h (hazard); o (coin). The structure of text-based array has a strong visual correlation with the resulting game layout and changes to the text based grid in the code area on the left would be immediately seen in the right hand project preview area. This solution abstracts away complexity and repetitive nature of asset placement mirroring a technique called tilemaps [@erhard-olsson_procedural_2018] used in GUI oriented game making tools (see glossary and Appendix.tech).
 
 
-#### Brief section on Impact - INTEGRATE ABOVE SOMEHOW?
+#### Brief section on Impact
 
 INCLUDE SOME INTERVIEW DATA IF USEFUL.
 IF NOT THEN DO SOME SIGNPOSTING AS TO WHERE THE IMPACT IS EXPLORED IN LATER CHAPTERS. ETC.
@@ -222,7 +225,7 @@ The use of a template aligned with half-baked approach helped by introducing cod
 
 The ability for individuals and pairs to make quick changes to the games templates via in terms of the affordances described in the previous section appeared to build their ownership over these fledgling games and set a path of working in a smaller group.
 
-While my design aim was in part to reduce coding syntax errors and thus reduce learner anxiety, I did not wish not to remove the possibility of learners making mistakes entirely. While even these small changes involved potential syntax errors, as these simple expressions were surrounded by other lines modelling the correct syntax, they could often be corrected by the participants without facilitator support. This chapter's vignette (Appendix 5.toby), where Toby designs many levels as a way of making his game distinct from others, illustrates the impact of this technical adaptation on the evolution of social coding processes a theme which is explored in more detail in a following section.
+While my design aim was in part to reduce coding syntax errors and thus reduce learner anxiety, I did not wish not to remove the possibility of learners making mistakes entirely. While even these small changes involved potential syntax errors, as these simple expressions were surrounded by other lines modelling the correct syntax, they could often be corrected by the participants without facilitator support. This chapter's vignette (Appendix 5.toby), where Toby designs many levels as a way of making his game distinct from others, illustrates the impact of this technical adaptation on the evolution of social coding processes a theme which is explored in more detail in the section contradiction area 3.
 
 ### Contradiction area 2: contradictions associated with project navigation and use of documentation
 
@@ -368,7 +371,7 @@ These elements were themed to align with the MDA (mechanics, dynamics, aesthetic
 
 ### Brief observations on impact
 
-The highlighted affordances of the template and supporting code examples proved impactful. Despite their relative simplicity, these tools enabled the creation of diverse and complex games, even at early stages.
+The highlighted affordances of the template and supporting code examples proved impactful from their introduction in P2 onwards. Despite their relative simplicity, these tools enabled the creation of diverse and complex games, even at early stages.
 
 While some challenges remained (see Vignette 6.1), video data in the next chapter shows increased participant ability to implement game features. The shift from facilitator dependency to tool-mediated progression marks an early instance of learners shaping their own pathways, a theme further explored in Chapter 7.
 
@@ -577,7 +580,7 @@ Gilbert is the worsted name.
 [^pl]: Mark and Ed described themselves as plodding throught that step by step documentations in Vignette ?
 [^ss]: See opening chapters of https://3m.flossmanuals.net/
 [^mda]: The evolution and of this theming is outlined in more detail in Appendix.tech.gameframework.
-
+[^pt]: Playtesting is described in Chapter 2 as ..
 
 [^1]: https://mickfuzz.github.io/makecode-platformer-101/
 [^2]: https://mickfuzz.github.io/makecode-platformer-101/learningDimensions
